Changes in Version 1.4-4

  o TODO: fix recresid
  
  o Improvement in breakdates() computations.


Changes in Version 1.4-3

  o Speed-up in breakpoints() for the intercept-only case,
    i.e., breakpoints(y ~ 1).


Changes in Version 1.4-2

  o Improved time index computations in gefp().

  o Added replication notes in ?durab.
  

Changes in Version 1.4-1

  o efp(), Fstats(), and breakpoints() are now more cautios about using
    time series properties from the data and try to check whether any
    NAs were removed. In general, the functions will yield best results
    if all NA processing is done before calling them.
    
  o Better handling of time series properties for the boundaries in
    the examples of SP2001.


Changes in Version 1.4-0

  o added optional high performance computing support by means of the
    "foreach" package for the breakpoints() formula method. This can
    be leveraged to alleviate the computational burden in the dynamic
    programming approach. Simply register a parallel backend (e.g.,
    by means of "doMC" or "doSNOW") and call breakpoints() with
    additional argument hpc = "foreach".


Changes in Version 1.3-7

  o added optional start end end arguments to recresid().


Changes in Version 1.3-6

  o enhanced documentation for new Rd parser.


Changes in Version 1.3-5

  o added some further references to the vignette,
    and provide the associated .bib file in ~/inst/doc/.

  o removed \itemize in .Rd files for new R-devel

  
Changes in Version 1.3-4

  o fixed CITATION encoding
  
  o removed Z.sty dependency in vignette
  

Changes in Version 1.3-3

  o enhanced references in the vignette, CITATION and 
    man pages

  o fixed some outdated information in the vignette


Changes in Version 1.3-2

  o added new data set with bibliographic information about
    structural change publications


Changes in Version 1.3-1

  o renamed SP500 to SP2001 to avoid conflicts with MASS


Changes in Version 1.3-0

  o added NAMESPACE
