@@ -1,6 +1,6 @@
 Package: strucchange
-Version: 1.4-3
-Date: 2010-12-14
+Version: 1.4-4
+Date: 2011-05-13
 Title: Testing, Monitoring and Dating Structural Changes
 Author: Achim Zeileis, Friedrich Leisch, Bruce Hansen,
         Kurt Hornik, Christian Kleiber
