@@ -21,31 +21,53 @@ recresid.lm <- function(x, data = list(), ...)
     return(rr)
 }
 
-recresid.default <- function(x, y, start = ncol(x) + 1, end = nrow(x), ...)
+recresid.default <- function(x, y, start = ncol(x) + 1, end = nrow(x),
+  tol = sqrt(.Machine$double.eps), ...)
 {
-    stopifnot(start > ncol(x) & start <= nrow(x))
-    stopifnot(end >= start & end <= nrow(x))
-    n <- end
-    q <- start - 1
-    w <- rep(0,(n-q))
-    Xr1 <- x[1:q,,drop = FALSE]
-    xr <- as.vector(x[q+1,])
-    X1 <- solveCrossprod(Xr1)
-    fr <- as.vector((1 + (t(xr) %*% X1 %*% xr)))
-    betar <- X1 %*%t(Xr1)%*% y[1:q]
-    w[1] <- (y[q+1] - t(xr) %*% betar)/sqrt(fr)
+  ## checks and data dimensions
+  stopifnot(start > ncol(x) & start <= nrow(x))
+  stopifnot(end >= start & end <= nrow(x))
+  n <- end
+  q <- start - 1
+  k <- ncol(x)
+  rval <- rep(0, n - q)
 
-    if((q+1) < n)
+  ## initialize recursion
+  y1 <- y[1:q]
+  fm <- lm.fit(x[1:q, , drop = FALSE], y1)
+  X1 <- chol2inv(qr.R(fm$qr))	 
+  betar <- fm$coefficients
+  xr <- as.vector(x[q+1,])
+  fr <- as.vector((1 + (t(xr) %*% X1 %*% xr)))
+  rval[1] <- (y[q+1] - t(xr) %*% betar)/sqrt(fr)
+
+  ## check recursion agains full QR decomposition?
+  check <- TRUE
+
+  if((q+1) < n)
+  {
+    for(r in ((q+2):n))
     {
-      for(r in ((q+2):n))
-      {
-          X1 <- X1 - (X1 %*% outer(xr, xr) %*% X1)/fr
-	  betar <- betar + X1 %*% xr * w[r-q-1]*sqrt(fr)
-	  xr <- as.vector(x[r,])
-          fr <- as.vector((1 + (t(xr) %*% X1 %*% xr)))
-          w[r-q] <- (y[r] - t(xr) %*% betar)/sqrt(fr)
-      }
+	## recursion formula
+        X1 <- X1 - (X1 %*% outer(xr, xr) %*% X1)/fr
+        betar <- betar + X1 %*% xr * rval[r-q-1] * sqrt(fr)
+
+	## full QR decomposition
+	if(check) {
+	  y1 <- y[1:(r-1)]
+	  fm <- lm.fit(x[1:(r-1), , drop = FALSE], y1)
+	  ## keep checking?
+	  if(max(abs((betar - fm$coefficients) / fm$coefficients)) < tol) check <- FALSE 
+	  X1 <- chol2inv(qr.R(fm$qr))
+          betar <- fm$coefficients
+        }
+        
+        ## residual
+        xr <- as.vector(x[r,])
+	fr <- as.vector((1 + (t(xr) %*% X1 %*% xr)))
+	rval[r-q] <- (y[r] - sum(xr * betar, na.rm = TRUE))/sqrt(fr)
     }
-    return(w)
+  }
+  return(rval)
 }
 
